# stockquare

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
.claude/: settings.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: assistant.py  auth.py  market.py  portfolio.py  router.py  stocks.py  strategy.py  trading.py  watchlist.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: models.py  session.py
backend/app/kis/: client.py  master.py  models.py  token.py
backend/app/models/: assistant.py  market.py  portfolio.py  stocks.py  strategy.py  trading.py  watchlist.py
backend/app/services/: _helpers.py  agent_runner.py  assistant.py  assistant_tools.py  indicators.py  portfolio.py  stock_index.py  stocks.py  strategy.py  watchlist.py
backend/app/services/assistant/: __init__.py  runner.py  service.py  tools.py
backend/app/services/market/: __init__.py  service.py
backend/app/services/portfolio/: __init__.py  service.py
backend/app/services/stock_index/: __init__.py
backend/app/services/stocks/: __init__.py  service.py
backend/tests/: conftest.py  test_config.py  test_cors.py
backend/tests/api/: test_assistant.py  test_auth.py  test_market.py  test_portfolio.py  test_stocks.py  test_strategy.py  test_trading.py  test_watchlist.py
backend/tests/kis/: test_master.py  test_token.py
backend/tests/services/: README.md  test_assistant_tools.py  test_indicators.py  test_stock_index.py  test_stocks_ranking.py
(+139 files in other folders)
